--- a/client/src/scss/settings/_colors.hc.settings.scss
+++ b/client/src/scss/settings/_colors.hc.settings.scss
@@ -52,6 +52,12 @@ $scan-low: #ff6347;
 $scan-moderate: #f0b800;
 $scan-high: #58a155;
 $scan-veryHigh: #008000;
+
+// stock gain and loss
+$gain: #186427;
+$loss: #a50e0e;
+$loss-background: #fce8e6;
+$gain-background: #e6f4ea;
 ///////////////////////////////////////////
 // CUSTOM COMPONENT COLORS
 ///////////////////////////////////////////
