--- a/client/src/app/main/watchlist/[slug]/watchlist.module.scss
+++ b/client/src/app/main/watchlist/[slug]/watchlist.module.scss
@@ -4,7 +4,7 @@
 }
 
 .header {
-  margin-bottom: 1rem;
+  padding: 1.25rem 0;
 
   h1 {
     font-size: 1.5rem;
@@ -21,28 +21,48 @@
   }
 
   .changeUp {
-    color: #16a34a; // green
+    color: globals.$gain; // green
   }
 
   .changeDown {
-    color: #dc2626; // red
+    color: globals.$loss; // red
   }
 }
 
-.chartPlaceholder {
-  display: flex;
-  align-items: flex-end;
-  height: 100px;
-  background: #f3f4f6;
-  border-radius: 6px;
+.chart {
+  width: 100%;
+  max-width: 1000px;
+  width: 100%;
+  display: block;
+  position: relative;
+  height: 400px;
+  max-height: 400px;
   margin-bottom: 2rem;
 
-  .bar {
-    flex: 1;
-    margin: 0 1px;
-    background: #64748b;
-    border-radius: 2px 2px 0 0;
+  h2 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
   }
+
+  &__container {
+    display: flex;
+    width: inherit;
+    gap: 1rem;
+    &--graph {
+      width: 50%;
+      height: 200px;
+      background: #eef3f8;
+      border-radius: 8px;
+      border: 1px dashed #ccc;
+    }
+  }
+}
+.chartPlaceholder {
+  width: 100%;
+  height: 200px;
+  background: #eef3f8;
+  border-radius: 8px;
+  border: 1px dashed #ccc;
 }
 
 .metrics {
